# IN4152-FinalProject

./: CMakeLists.txt  README.md
Resources/: Hangar2.mtl  RockyPlanets.mtl  gijsEarth.mtl  mars.mtl  minimap.frag  minimap.vert  minimaptest.frag  minimaptest.vert  obstacleArc.mtl  obstacleArcSimplified.mtl  pink.mtl  shader.frag  shader.vert  shaderSkySphere.frag  shaderSkySphere.vert  shadow.frag  shadow.vert  skybox.mtl  skysphereblue.mtl  skysphereblueBH.mtl  spacecraft.mtl  sun.mtl  test.frag  test.vert
Resources/shaders/: shader.frag  shaderSkySphere.frag  shaderSkySphere.vert  shadow.frag
Resources/spacecraftExplosion/: spacecraftExplosion_000004.mtl
Source/: Application.cpp  CMakeLists.txt  Image.cpp  Image.h  Model.cpp  Model.h
